# hexapod

./: .gitignore  AGENTS.md  COMPANION_APP_PLAN.md  JETSON_AUTONOMY_PLAN.md  seed_beads_backlog.sh
companion/: README.md  justfile  pyproject.toml
companion/src/: app.py  cli.py  diagnostics.py  main_window.py
companion/src/data/: __init__.py  event_log.py  mesh_loader.py  plot_signals.py  session_logger.py  session_replay.py  urdf_fk.py  urdf_model.py
companion/src/models/: __init__.py  pose_model.py
companion/src/services/: __init__.py
companion/src/theme/: __init__.py
companion/src/transport/: __init__.py  protocol_client.py
companion/src/ui/: __init__.py  app_icon.py
companion/src/ui/pages/: __init__.py
companion/src/ui/widgets/: __init__.py  hexapod_view.py  servo_detail.py  urdf_gl_view.py
companion/tests/: __init__.py  conftest.py  replay_fixtures.py  test_cli.py  test_connection_service.py  test_core_pages.py  test_diagnostics_page.py  test_event_log.py  test_foot_contact_page.py  test_frame_extractor.py  test_gait_lab_page.py  test_leg_lab_page.py  test_main_window.py  test_mode_safety_page.py  test_page_smoke.py  test_passive_pose_page.py  test_plot_signals.py  test_plot_workbench_page.py  test_pose_model.py  test_protocol_client.py  test_rc_troubleshooting_page.py  test_sensor_dashboard_page.py  test_servo_config_page.py  test_servo_detail.py  test_servo_tuning_page.py  test_session_logger.py  test_theme.py  test_ui_smoke.py  test_urdf_fk.py  test_urdf_mesh_loader.py  test_urdf_model.py  test_urdf_viewer_page.py  test_widgets.py
protocol/python/: README.md  pyproject.toml
protocol/python/hexapod_protocol/: __init__.py  api.py  cobs.py  config.py  crc16.py  framing.py  telemetry.py
robot_ros_simulation/HexNav_description/: CMakeLists.txt  package.xml  robot_data.yaml
robot_ros_simulation/HexNav_description/config/: joint_state.yaml  ros2_controllers.yaml
robot_ros_simulation/HexNav_description/docs/: inverse_kinematics.md  transforms.md
robot_ros_simulation/HexNav_description/launch/: display.launch.py
robot_ros_simulation/HexNav_description/meshes/HexNav/: base_link.dae  base_link_collision.stl  bot.dae  bot_collision.stl  leg_1_coxa.dae  leg_1_femur.dae  leg_1_mx28_coxa.dae  leg_1_mx28_coxa_collision.stl  leg_1_mx28_femur.dae  leg_1_mx28_tibia.dae  leg_1_tibia.dae  leg_2_coxa.dae  leg_2_femur.dae  leg_2_mx28_coxa.dae  leg_2_mx28_femur.dae  leg_2_mx28_tibia.dae  leg_2_tibia.dae  leg_3_coxa.dae  leg_3_femur.dae  leg_3_mx28_coxa.dae  leg_4_coxa.dae  (+23 more)
robot_ros_simulation/HexNav_description/rviz/: display.rviz
robot_ros_simulation/HexNav_description/scripts/: joint_gui.py
robot_ros_simulation/HexNav_description/urdf/: HexNav.urdf  HexNav.urdf.xacro
(+153 files in other folders)
