[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexapod-companion"
version = "0.1.0"
description = "macOS development console for the OpenRB-150 hexapod (PySide6 UI + CLI)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "hexapod-protocol",
    "pyserial>=3.5",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "typer>=0.12",
    "pyopengl>=3.1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4.4"]

[project.scripts]
hexapod-cli = "cli:main"
hexapod-companion = "app:main"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.uv.sources]
hexapod-protocol = { path = "../protocol/python", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
