[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexapod-protocol"
version = "0.1.0"
description = "Host-side encode/decode for the OpenRB-150 hexapod USB API (UI-independent)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["hexapod_protocol"]
